force-app/main/default/objects/Project_Team_Member_Record_Access__mdt/Project_Team_Member_Record_Access__mdt.object-meta.xml
<CustomObject>
    <description>Declarative method of defining the access that Project Team Members have to various objects and records</description>
    <label>Project Team Member Record Access</label>
    <pluralLabel>Project Team Member Record Access</pluralLabel>
</CustomObject>