force-app/main/default/objects/Project_Team_Member_Record_Access__mdt/fields/I_RS_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Access_Level__c</fullName>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>