force-app/main/default/objects/Project_Team_Member_Record_Access__mdt/fields/I_RS_Object_Access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Access__c</fullName>
    <label>Object Access</label>
    <referenceTo>Project_Team_Member_Object_Access__mdt</referenceTo>
    <relationshipName>Project_Team_Member_Record_Access_Levels</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>