force-app/main/default/objects/Project_Team_Member_Record_Access__mdt/fields/I_RS_Role__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Role__c</fullName>
    <description>Project Team Member Role</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chief Investigator</fullName>
            </value>
            <value>
                <fullName>Lead Chief Investigator</fullName>
                <default>true</default>
                <label>Lead Chief Investigator</label>
            </value>
            <value>
                <fullName>External Investigator</fullName>
            </value>
            <value>
                <fullName>Partner Researcher</fullName>
            </value>
            <value>
                <fullName>Graduate Researcher</fullName>
            </value>
            <value>
                <fullName>Adjunct Researcher</fullName>
            </value>
            <value>
                <fullName>Honorary Researcher</fullName>
            </value>
            <value>
                <fullName>Research Assistant</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Student or Graduate Researcher Supervisor</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <isActive>false</isActive>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Partner Investigator</fullName>
                <isActive>false</isActive>
                <label>Partner Investigator</label>
            </value>
            <value>
                <fullName>Peer reviewer</fullName>
                <isActive>false</isActive>
                <label>Peer reviewer</label>
            </value>
            <value>
                <fullName>Pitch panel member</fullName>
                <isActive>false</isActive>
                <label>Pitch panel member</label>
            </value>
            <value>
                <fullName>Postgraduate student</fullName>
                <isActive>false</isActive>
                <label>Postgraduate student</label>
            </value>
            <value>
                <fullName>Project Manager</fullName>
                <isActive>false</isActive>
                <label>Project Manager</label>
            </value>
            <value>
                <fullName>Student supervisor</fullName>
                <isActive>false</isActive>
                <label>Student supervisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>